--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -225,69 +225,6 @@
         right: 10px;
     }
 
-    /* ==== SECCIÓN INFORMATIVA ==== */
-    .info-rectangle {
-        max-width: 900px;
-        margin: 40px auto;
-        background: linear-gradient(135deg, #f0f4f9, #dbe7f7);
-        padding: 25px 30px;
-        border-radius: 12px;
-        box-shadow: 0 6px 18px rgba(0,0,0,0.1);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-        text-align: center;
-    }
-
-    .info-rectangle p {
-        font-size: 16px;
-        color: #1a1a1a;
-        margin: 0;
-        line-height: 1.5;
-    }
-
-    .info-rectangle .download-link {
-        padding: 10px 25px;
-        font-size: 16px;
-        border-radius: 8px;
-        background-color: #007bff;
-        color: #fff;
-        text-decoration: none;
-        font-weight: bold;
-        position: relative;
-        overflow: hidden;
-        transition: background-color 0.3s, transform 0.2s;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        gap: 8px;
-    }
-
-    .info-rectangle .download-link:hover {
-        background-color: #0056b3;
-        transform: translateY(-2px);
-    }
-
-    .info-rectangle .download-link::after {
-        content: '';
-        position: absolute;
-        top: var(--y, 50%);
-        left: var(--x, 50%);
-        width: 100px;
-        height: 100px;
-        background: radial-gradient(circle at center, rgba(255,255,255,0.6) 0%, rgba(255,255,255,0.0) 70%);
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        pointer-events: none;
-        opacity: 0;
-        transition: opacity 0.3s;
-    }
-
-    .info-rectangle .download-link.active::after {
-        opacity: 1;
-    }
-
     /* ==== SECCIÓN DE PRODUCTOS ==== */
     .products-section {
         max-width: 1100px;
@@ -298,6 +235,7 @@
         text-align: left;
     }
 
+    /* Fondo degradado para todo el cuadro del producto */
     .product-card {
         background: linear-gradient(135deg, #f7f9fc, #e6eefb);
         padding: 20px;
@@ -311,6 +249,7 @@
         overflow: hidden;
     }
 
+    /* Brillo animado al pasar el mouse */
     .product-card::after {
         content: '';
         position: absolute;
@@ -353,6 +292,7 @@
         z-index: 1;
     }
 
+    /* Precio sin fondo */
     .product-card .price {
         font-weight: bold;
         color: #1a1a1a;
@@ -412,6 +352,58 @@
         width: 35px;
         height: 35px;
     }
+
+    /* ==== SECCIÓN INFORMATIVA DE RUSTDESK ==== */
+    .info-section {
+        max-width: 900px;
+        margin: 40px auto 60px;
+        background-color: #f1f4f8;
+        padding: 30px 25px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        text-align: left;
+    }
+
+    .info-section h2 {
+        color: #007bff;
+        font-size: 24px;
+        margin-bottom: 15px;
+    }
+
+    .info-section p {
+        color: #333;
+        font-size: 15px;
+        line-height: 1.6;
+        margin-bottom: 15px;
+    }
+
+    .info-btn {
+        display: inline-block;
+        padding: 12px 25px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 8px;
+        transition: background-color 0.3s, transform 0.2s;
+    }
+
+    .info-btn:hover {
+        background-color: #0056b3;
+        transform: translateY(-2px);
+    }
+
+    @media (max-width: 600px) {
+        .info-section {
+            padding: 20px 15px;
+        }
+        .info-section h2 {
+            font-size: 20px;
+        }
+        .info-section p {
+            font-size: 14px;
+        }
+    }
 </style>
 </head>
 <body>
@@ -456,15 +448,20 @@
     <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
 </div>
 
-<!-- ==== SECCIÓN INFORMATIVA ==== -->
-<div class="info-rectangle">
+<!-- ==== SECCIÓN INFORMATIVA DE RUSTDESK ==== -->
+<div class="info-section">
+    <h2>Sobre RustDesk</h2>
     <p>
-        RustDesk es una herramienta de conexión remota profesional, segura y confiable.
-        Permite gestionar equipos a distancia sin complicaciones, con soporte multiplataforma y cifrado de extremo a extremo.
+        RustDesk es una herramienta de conexión remota profesional, segura y confiable, diseñada para 
+        brindar soporte técnico eficiente a computadoras y dispositivos en cualquier lugar. 
+        Con RustDesk, puede acceder de manera remota a sus sistemas, transferir archivos de forma rápida 
+        y administrar múltiples equipos de manera simultánea, todo con máxima seguridad y privacidad.
     </p>
-    <a href="https://rustdesk.com/" target="_blank" class="download-link">
-        Más información
-    </a>
+    <p>
+        Nuestro servicio garantiza la autenticidad de las descargas y la compatibilidad con Windows y macOS, 
+        asegurando que siempre cuente con la versión más reciente y certificada de RustDesk.
+    </p>
+    <a href="https://rustdesk.com" target="_blank" class="info-btn">Más información</a>
 </div>
 
 <!-- ==== SECCIÓN DE PRODUCTOS ==== -->
@@ -531,51 +528,40 @@
 </a>
 
 <footer>
-    WhatsApp: <a href="https://wa.me/51945482880">945482880</a> |
-    Instagram: <a href="https://www.instagram.com/robert.softwar">robert.softwar</a> |
-    Página Web: <a href="https://www.robert-software.com">www.robert-software.com</a>
+    Robert Software - Dirección: San Isidro, Lima, Perú | RUC: 10731171705 | Teléfono: 945482880<br>
+    Redes sociales: <a href="https://www.instagram.com/robert.softwar" target="_blank">@robert.softwar</a> | <a href="https://www.facebook.com/RobertSoftware" target="_blank">Facebook</a> | <a href="https://www.robert-software.com" target="_blank">Página Web</a>
 </footer>
 
 <script>
-    document.querySelectorAll('.download-link').forEach(link => {
-        link.addEventListener('mousemove', e => {
-            const rect = e.target.getBoundingClientRect();
-            link.style.setProperty('--x', e.clientX - rect.left + 'px');
-            link.style.setProperty('--y', e.clientY - rect.top + 'px');
-            link.classList.add('active');
-        });
-        link.addEventListener('mouseleave', () => {
-            link.classList.remove('active');
-        });
-    });
-
-    // Carousel simple
+    // Carrusel
     const track = document.querySelector('.carousel-track');
     const slides = Array.from(track.children);
     const nextButton = document.querySelector('.carousel-arrow-right');
     const prevButton = document.querySelector('.carousel-arrow-left');
     let currentIndex = 0;
 
-    function updateCarousel() {
-        track.style.transform = 'translateX(-' + (currentIndex * 100) + '%)';
-    }
-
     nextButton.addEventListener('click', () => {
         currentIndex = (currentIndex + 1) % slides.length;
-        updateCarousel();
+        track.style.transform = `translateX(-${currentIndex * 100}%)`;
     });
 
     prevButton.addEventListener('click', () => {
         currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-        updateCarousel();
+        track.style.transform = `translateX(-${currentIndex * 100}%)`;
     });
 
-    // Mostrar flecha animada
-    const arrowGif = document.getElementById('downloadGif');
-    window.addEventListener('scroll', () => {
-        if(window.scrollY > 100) arrowGif.style.display = 'block';
-        else arrowGif.style.display = 'none';
+    // Botón de descarga animación
+    document.querySelectorAll('.download-link').forEach(btn => {
+        btn.addEventListener('mousemove', e => {
+            const rect = btn.getBoundingClientRect();
+            btn.style.setProperty('--x', e.clientX - rect.left + 'px');
+            btn.style.setProperty('--y', e.clientY - rect.top + 'px');
+        });
+        btn.addEventListener('mouseleave', () => btn.classList.remove('active'));
+        btn.addEventListener('mousedown', () => btn.classList.add('active'));
+        btn.addEventListener('mouseup', () => btn.classList.remove('active'));
     });
 </script>
+
 </body>
 </html>
