--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -503,7 +503,25 @@
     <div class="product-card">
         <h3>Edición de Video</h3>
         <p>Software para creación y edición de videos profesionales.</p>
-        <p class="price">- Licencia permanente: S/. 45 (Perú) / CLP 18.900 (Chile)</p>
+        <p class="price">- S/. 20 (Perú) / CLP 9.800 (Chile)</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
+            <img src="whatsapp-icon.png" alt=""> Consultar
+        </a>
+    </div>
+
+    <div class="product-card">
+        <h3>Música y Producción</h3>
+        <p>Grabación y edición de audio profesional.</p>
+        <p class="price">- S/. 20 (Perú) / CLP 9.500 (Chile)</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
+            <img src="whatsapp-icon.png" alt=""> Consultar
+        </a>
+    </div>
+
+    <div class="product-card">
+        <h3>Otros Programas Especializados</h3>
+        <p>La mayoría de productos profesionales del mercado.</p>
+        <p class="price">- Consulte por el programa o licencia que busca</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
