--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -448,7 +448,7 @@
     <p>
         Robert Software distribuye versiones certificadas y actualizadas de RustDesk, asegurando que los clientes reciban un producto confiable y listo para su uso inmediato. Nuestro soporte remoto garantiza asistencia técnica rápida y eficaz, adaptándose a las necesidades de cada usuario.
     </p>
-    <a href="https://wa.me/51945482880?text=Hola,%20quiero%20más%20información%20sobre%20RustDesk" target="_blank" class="info-btn">Más información</a>
+    <a href="https://wa.me/51945482880?text=Hola,%20quiero%20más%20información%20sobre%20RustDesk" target="_blank" class="info-btn download-link">Más información</a>
 </div>
 
 <!-- ==== SECCIÓN DE PRODUCTOS ==== -->
