--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -235,6 +235,16 @@
         text-align: left;
     }
 
+    /* TÍTULO NUEVO PARA PRODUCTOS */
+    .products-section-title {
+        font-size: 26px;
+        font-weight: bold;
+        color: #007bff;
+        max-width: 1100px;
+        margin: 30px auto 10px;
+        text-align: center;
+    }
+
     /* Fondo degradado para todo el cuadro del producto */
     .product-card {
         background: linear-gradient(135deg, #f7f9fc, #e6eefb);
@@ -452,6 +462,7 @@
 </div>
 
 <!-- ==== SECCIÓN DE PRODUCTOS ==== -->
+<div class="products-section-title"><strong>Explore nuestros productos y servicios profesionales</strong></div>
 <div class="products-section">
     <div class="product-card">
         <h3>Software de Diseño</h3>
