--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -569,7 +569,8 @@
 </footer>
 
 <script>
-    // Carousel
+    <script>
+    // === CARRUSEL ===
     const track = document.querySelector('.carousel-track');
     const slides = Array.from(track.children);
     const prevButton = document.querySelector('.carousel-arrow-left');
@@ -593,15 +594,14 @@
 
     window.addEventListener('resize', updateCarousel);
 
-    // <<< AQUI AGREGAMOS EL AUTO-SCROLL >>>
     setInterval(() => {
         currentIndex = (currentIndex + 1) % slides.length;
         updateCarousel();
     }, 3000);
 
-    // Download button effect
-    const downloadButtons = document.querySelectorAll('.download-link');
-    downloadButtons.forEach(btn => {
+    // === EFECTO HOVER EN BOTONES DE DESCARGA ===
+    const downloadButtonsHover = document.querySelectorAll('.download-link');
+    downloadButtonsHover.forEach(btn => {
         btn.addEventListener('mousemove', e => {
             const rect = btn.getBoundingClientRect();
             const x = e.clientX - rect.left;
@@ -613,11 +613,14 @@
         btn.addEventListener('mouseleave', () => btn.classList.remove('active'));
     });
 
-    // Arrow GIF scroll
+    // === GIF SOLO AL HACER CLICK EN BOTONES DE DESCARGA ===
     const arrow = document.getElementById('downloadGif');
-    window.addEventListener('scroll', () => {
-        if(window.scrollY > 100) arrow.style.display = 'block';
-        else arrow.style.display = 'none';
+    const downloadButtonsClick = document.querySelectorAll('#btnWin, #btnMac');
+
+    downloadButtonsClick.forEach(btn => {
+        btn.addEventListener('click', () => {
+            arrow.style.display = 'block'; // mostrar GIF al hacer clic
+        });
     });
 </script>
 
